# SampleSorter

./: .gitignore  CMakeLists.txt  ComeTogether.m4a.reapeaks  README-max.md  README.md  SampleSorter.amxd  TODO  key.js  testFile.alc
Trash/: MPEGFile.hpp  Tempo.cpp  Tempo.hpp  TempoFunction.cpp  TempoFunction.hpp
include/Plotting/: Plotting.hpp
include/SampleSorter/: .Sample.hpp.swp  AbletonSample.hpp  AbletonSampleFile.hpp  AudioFile.hpp  AudioSample.hpp  EqualLoudness.hpp  MP4File.hpp  MusicTheory.hpp  Octave.hpp  ProcessingException.hpp  Sample.hpp  SampleFile.hpp  SpectralProcessing.hpp  Tempo.hpp  TimeDomainProcessing.hpp  Units.hpp
include/sample_sorter/: audio.hpp  beat.hpp  octave.hpp  sample.hpp  units.hpp
modules/: FindFFmpeg.cmake  FindLibMad.cmake  FindLibSndFile.cmake
paper/: paper.aux  paper.tex  paper.toc  style.sty
paper/tex/: chords.tex  introduction.tex  learning.tex  tempo.tex  title.tex  tuning.tex  writing.tex
python_src/: AudioToMIDI.py  ProcessLibrary.py  avalanche.mid  avalanche2.mid  bach.mid  beachBoys.mid  graph.data-00000-of-00001  graph.index  joe.mid  joe2.mid  octave_classifier.py  octave_hyperparam_search.py  octave_reader.py  sample.py  sample_reader.py  sort.py  sort_train.py  to_osc.py  top_ten.py
src/: AbletonSample.cpp  AbletonSampleFile.cpp  AudioFile.cpp  AudioSample.cpp  EqualLoudness.cpp  MP4File.cpp  MPEGFile.cpp  MusicTheory.cpp  Octave.cpp  Plotting.cpp  PythonExternals.cpp  Sample.cpp  SampleFile.cpp  SpectralProcessing.cpp  Tempo.cpp  TimeDomainProcessing.cpp  Units.cpp  audio.cpp  beat.cpp  sample.cpp  tempoFunction.cpp
test/: MPEG_test.cpp  audio_test.cpp  basic_test.cpp  make_examples.cpp  tensorFlow_test.cpp
test/User Library/Ableton Project Info/: Project8_1.cfg
test/User Library/Samples/: sample.alc
test/User Library/Sources/: Smokey Robinson - I Am I Am (Clipped).wav.asd
testFiles/: # half guitar half synth kinda brian may groovy summer jam Bb maj, Eb maj, F maj.alc  Classic hip hop boom bap.alc  Funky 'baby lets get lost'.alc  I only stop solo.alc  Jittering strings potential hip hop F min.alc  Slow ebbing solo strings C maj D min 85bpm.alc  You're gettin to smart - great sample for a song about whippits.alc  break 80s drums fast short delay 155bpm.alc  random sample.alc  testFile.alc  testFile1.alc  testFile5.alc  thin wavery guitar (but present) solo picking chords out - Db maj, Ab maj, Db maj, F min, Gb maj, Ab maj 85bpm.alc
